# ubuntu-node

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ansible/: ansible.cfg  base.yaml  docker.yaml  gauth.yaml  inventory.example.yaml  inventory.home.yaml  microk8s.yaml  pyproject.toml
ansible/deploy/google-auth/: .gitignore
ansible/group_vars/: all.yaml
ansible/multipass/: admin.id_rsa.pub  cloud-init.yaml  launch.sh
ansible/roles/base/: README.md
ansible/roles/base/defaults/: main.yaml
ansible/roles/base/handlers/: main.yaml
ansible/roles/base/tasks/: apt.yaml  avahi.yaml  firewall.yaml  logwatch.yaml  main.yaml  ssh.yaml  users.yaml
ansible/roles/base/templates/fail2ban/: ssh.filter.conf.j2  ssh.jail.conf.j2  ufw.filter.conf.j2  ufw.jail.conf.j2
ansible/roles/base/templates/ufw/: openssh-server.j2
ansible/roles/base/vars/: main.yml
ansible/roles/docker/tasks/: main.yaml
ansible/roles/google-auth/files/: generate-qr.py
ansible/roles/google-auth/tasks/: main.yaml
ansible/roles/google-auth/templates/fail2ban/: filter.gauth.conf.j2  jail.gauth.conf.j2
ansible/roles/microk8s/tasks/: apt.yaml  cluster.yaml  firewall.yaml  main.yaml  wipe.yaml
ansible/roles/microk8s/tasks/vars/: main.yml
ansible/roles/microk8s/templates/ufw/: microk8s.conf.j2
assets/: adminlocal-google-auth.txt
multipass/: admin.id_rsa  cloud-init.yaml
