[tool.poetry]
name = "ubuntu-node"
version = "0.1.0"
description = ""
authors = ["Mentor <time.scalar06@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^6.6.0"
paramiko = "^2.12.0"
netaddr = "^0.8.0"

[tool.poetry.group.hardened]
optional = true
[tool.poetry.group.hardened.dependencies]
pyotp = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
