[tool.poetry]
name = "ubuntu-node"
version = "0.1.0"
description = ""
authors = ["Darth Veitcher"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.6.0"
paramiko = "^2.10.3"
netaddr = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
pylama = "^8.3.8"
black = "^22.3.0"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
